--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "react-dropzone": "^14.2.3",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
