--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,8 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "redux": "^4.2.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
