--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,16 @@
 {
     "version": 2,
-    "name": "music-album",
+    "name": "",
     "builds": [
         {
-            "src": "app.js",
+            "src": "server.js",
             "use": "@vercel/node"
         }
     ],
     "routes": [
         {
-            "src": "/(.*)"
+            "src": "/(.*)",
+            "dest": "/"
         }
     ]
 }
