--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,12 +1,13 @@
 {
     "version": 2,
-    "name": "",
+    "name": "social media",
     "builds": [
         {
             "src": "server.js",
             "use": "@vercel/node"
         }
     ],
+    "framework": "node",
     "routes": [
         {
             "src": "/(.*)",
