--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,6 +1,12 @@
 {
     "version": 2,
-    "name": "music-album",
+    "name": "",
+    "builds": [
+        {
+            "src": "server.js",
+            "use": "@vercel/node"
+        }
+    ],
     "routes": [
         {
             "src": "/(.*)",
