--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,16 +1,8 @@
 {
-    "version": 2,
-    "name": "",
-    "builds": [
+    "rewrites": [
         {
-            "src": "server.js",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/"
+            "source": "/(.*)",
+            "destination": "/api"
         }
     ]
 }
