--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server"
+    "start": "node server.js",
+    "build": "cd server  && npm install && cd ../client  && npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
