--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "vite": "^2.0.0",
     "@reduxjs/toolkit": "^1.9.5",
     "antd": "^5.8.2",
     "axios": "^1.4.0",
