--- a/client/package.json
+++ b/client/package.json
@@ -24,8 +24,7 @@
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.7.2",
-    "vite": "^2.0.0",
-    "@vitejs/plugin-react": "^4.2.0"
+    "vite": "^2.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
