--- a/client/package.json
+++ b/client/package.json
@@ -23,8 +23,7 @@
     "react-router-dom": "^6.14.2",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
-    "socket.io-client": "^4.7.2",
-    "vite": "^2.0.0"
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -37,6 +36,6 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.4.5"
+    "vite": "^5.0.2"
   }
 }
