--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "vite": "^5.0.2",
+    "@vitejs/plugin-react": "^4.2.0",
     "@reduxjs/toolkit": "^1.9.5",
     "antd": "^5.8.2",
     "axios": "^1.4.0",
