--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vite": "^5.0.2",
-    "@vitejs/plugin-react": "^4.2.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "@vitejs/plugin-react": "^4.2.0",
     "antd": "^5.8.2",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
@@ -23,9 +22,11 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
+    "react-tooltip": "^5.26.3",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
-    "socket.io-client": "^4.7.2"
+    "socket.io-client": "^4.7.2",
+    "vite": "^5.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
