--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.8.2",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
+    "dotenv": "^16.4.5",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
