--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,8 @@
     "mongoose": "^7.4.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
